fix single date select z-index

--- a/src/components/Form/DatePickers/shared.module.scss
+++ b/src/components/Form/DatePickers/shared.module.scss
@@ -115,7 +115,7 @@
       display: block
     }
     .SingleDatePicker_picker {
-      z-index: 1;
+      z-index: 3;
       background-color: $white;
       position: absolute
     }
